Add shared_preferences dependency and implement user data storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   location: ^7.0.1
   latlong2: ^0.9.1
   flutter_map: ^7.0.2
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
