--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   latlong2: ^0.9.1
   flutter_map: ^7.0.2
   shared_preferences: ^2.5.2
+  web_socket_channel: ^3.0.2
 
 dev_dependencies:
   flutter_test:
